@@ -475,6 +475,7 @@ IP_SENDSRCADDR
 IP_ONESBCAST
 IP_RECVTTL
 IP_RECVIF
+IP_RECVSLLA
 IP_PORTRANGE
 IP_MULTICAST_IF
 IP_MULTICAST_TTL
@@ -552,6 +553,9 @@ SO_DETACH_FILTER
 SO_PEERNAME
 SO_TIMESTAMP
 SO_BINTIME
+SO_RECVUCRED
+SO_MAC_EXEMPT
+SO_ALLZONES
 
 SOPRI_INTERACTIVE
 SOPRI_NORMAL
@@ -653,6 +657,7 @@ SCM_RIGHTS
 SCM_CREDENTIALS
 SCM_CREDS
 SCM_TIMESTAMP
+SCM_UCRED
 
 LOCAL_PEERCRED
 LOCAL_CREDS
